feat: identify and end blocking vocabulary sessions
